test/e2e/envoyconfigs/zipkin-envoy-invalid-conf.yaml
node:
 cluster: ingress
 id: ingress~for-testing
 metadata:
  role: gloo-system~gateway-proxy

stats_sinks:
  - name: envoy.stat_sinks.metrics_service
    typed_config:
      "@type": type.googleapis.com/envoy.config.metrics.v3.MetricsServiceConfig
      grpc_service:
        envoy_grpc: {cluster_name: metrics_cluster}
static_resources:
  # Enable tracing on admin endpoint
  listeners:
  - name: test_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 11082
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: test
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: admin_port_cluster }
          http_filters:
          - name: envoy.filters.http.router
          tracing:
            # Intentional breakage to test invalid configs
            invalid_field: "This should break the entire config"
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": "type.googleapis.com/envoy.config.trace.v2.ZipkinConfig"
                collector_cluster: zipkin
                collector_endpoint: "/api/v2/spans"
                collector_endpoint_version: HTTP_JSON
  clusters:

  - name: zipkin
    connect_timeout: 1s
    type: STRICT_DNS
    load_assignment:
      cluster_name: zipkin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # TODO: How to have this work in CI (binary) + Local (docker)?
                address: host.docker.internal
                # address: 127.0.0.1
                port_value: 9411

  - name: admin_port_cluster
    connect_timeout: 5.000s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: admin_port_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 21001

  - name: access_log_cluster
    connect_timeout: 5.000s
    load_assignment:
      cluster_name: access_log_cluster
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 192.168.86.92
                    port_value: 0
    http2_protocol_options: {}
    type: STATIC

  - name: metrics_cluster
    connect_timeout: 5.000s
    load_assignment:
      cluster_name: metrics_cluster
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 192.168.86.92
                    port_value: 0
    http2_protocol_options: {}
    type: STATIC


dynamic_resources:

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 21001
